<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.hh.school</groupId>
    <artifactId>nab-todo</artifactId>
    <packaging>jar</packaging>
    <version>1.0.0</version>

    <name>todo with nab</name>

    <properties>
        <nab.version>4.15.4</nab.version>
        <java.version>11</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>ru.hh.nab</groupId>
            <artifactId>nab-starter</artifactId>
            <version>${nab.version}</version>
        </dependency>
        <dependency>
            <groupId>ru.hh.nab</groupId>
            <artifactId>nab-hibernate</artifactId>
            <version>${nab.version}</version>
        </dependency>
        <dependency>
            <groupId>ru.hh.nab</groupId>
            <artifactId>nab-testbase</artifactId>
            <version>${nab.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>hh-public</id>
            <name>hh public releases repository</name>
            <url>http://m2.hh.ru/content/repositories/public-releases</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <systemProperties>
                        <systemProperty>
                            <key>settingsDir</key>
                            <value>src/etc/nab-todo</value>
                        </systemProperty>
                    </systemProperties>
                    <mainClass>ru.hh.nab.todo.TodoMain</mainClass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <systemPropertyVariables>
                        <settingsDir>${basedir}/src/etc/nab-todo</settingsDir>
                        <argLine>--illegal-access=permit</argLine>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
